--- a/TestData/commonProperty.properties
+++ b/TestData/commonProperty.properties
@@ -1,4 +1,4 @@
 browser chrome
-url https://online.actitime.com/student129/login.do
-username bablugupta1357.bg@gmail.com
-password E$@YpvHV
+url https://online.actitime.com/student9/login.do
+username 11rahulyadav.ry@gmail.com
+password Ru4dhASZ
